--- a/src/assets/scss/core/_reset.scss
+++ b/src/assets/scss/core/_reset.scss
@@ -212,3 +212,7 @@ textarea {
   overflow: auto; // Remove vertical scrollbar in IE6-9
   vertical-align: top; // Readability and alignment cross-browser
 }
+
+button {
+  color: $black-100;
+}
